--- a/Itgm/Itgm/Views/AutorizationPage.xaml
+++ b/Itgm/Itgm/Views/AutorizationPage.xaml
@@ -1,28 +1,36 @@
 ﻿<UserControl x:Class="Itgm.Views.AutorizationPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             
              xmlns:local="clr-namespace:Itgm"
              xmlns:v="clr-namespace:Itgm.Views"
-             xmlns:ed="http://schemas.microsoft.com/expression/2010/drawing"
-             MouseUp="UserControl_MouseUp">
-    <Grid>
-        <WrapPanel Orientation="Vertical" 
+             xmlns:vm="clr-namespace:Itgm.ViewModels"
+             
+             mc:Ignorable="d"
+             
+             d:DataContext="{d:DesignInstance vm:AuthenticationViewModel}"
+             Background="Transparent"
+             Height="600"
+             Width="405"
+             MouseDown="UserControl_MouseUp">
+    <Grid Background="Transparent">
+        <WrapPanel Orientation="Vertical" Background="Transparent"
                    HorizontalAlignment="Center" 
                    VerticalAlignment="Center">
+            
+            <Image Source="..\\Images/itgm_white.png" 
+                   Width="400" Height="100"/>
 
-            <Image Source="..\\Images/TwitterLogo_white.png" 
-                   Width="1000" Height="100"/>
-
-            <!--<TextBlock Text="{Binding AuthenticationState, Converter={StaticResource ConnectionStateAuthConverter}}"
-                       Margin="0,-15,0,0"
+            <TextBlock Text="{Binding AuthenticationState, Converter={StaticResource ConnectionStateAuthConverter}}"
+                       Margin="0,20,0,0"
                        HorizontalAlignment="Center"
-                       FontSize="25"/>-->
+                       FontSize="18"/>
 
-            <TextBox Name="login"
+            <TextBox Name="login" Tag="l  o  g  i  n"
                      Width="200" Height="30" 
-                     Margin="0,50,0,0"
+                     Margin="0,25,0,0"
                      ContextMenu="{x:Null}"
                      Style="{StaticResource PincodeTextBoxStyle}"
                      Text="{Binding Login, UpdateSourceTrigger=PropertyChanged}">
@@ -31,7 +39,7 @@
                 </TextBox.InputBindings>
             </TextBox>
 
-            <TextBox Name="password"
+            <TextBox Name="password" Tag="p  a  s  s  w  o  r  d"
                      Width="200"
                      Height="30"
                      Margin="0,20,0,0"
@@ -45,8 +53,9 @@
             </TextBox>
 
             <Button Margin="0,30,0,0" 
-                    Content="Войти" 
-                    Command="{Binding EnterPinCodeCommand}"/>
+                    Content="E n t e r" 
+                    FontSize="25"
+                    Command="{Binding EnterCredentialsCommand}"/>
 
         </WrapPanel>
 
