--- a/Itgm/Itgm/Themes/Generic.xaml
+++ b/Itgm/Itgm/Themes/Generic.xaml
@@ -22,7 +22,7 @@
         <v:ContentPage/>
     </DataTemplate>
     <DataTemplate DataType="{x:Type vm:TweetsViewModel}">
-        <v:TweetsPage />
+        <v:GeneralContentPage />
     </DataTemplate>
 
     <!--Control templates-->
@@ -314,7 +314,7 @@
 
                             <Image Canvas.Left="7" Canvas.Top="4" 
                                    Width="13" Height="13" 
-                                   Source="..\\Images/TwitterLogo.png"/>
+                                   Source="..\\Images/itgm.png"/>
 
                             <Path Data="M2.5930001,2.655 L15.693,6.855 M6.4050001,14.862 L16.105,7.0620002 M2.9680001,2.862 L5.8680001,14.862 M5.1860002,2.8430001 C5.1860002,4.1370033 4.1370033,5.1860001 2.8430001,5.1860001 C1.5489969,5.1860001 0.50000005,4.1370033 0.50000005,2.8430001 C0.50000005,1.5489969 1.5489969,0.5 2.8430001,0.5 C4.1370033,0.5 5.1860002,1.5489969 5.1860002,2.8430001 z M8.3110002,15.093 C8.3110002,16.387003 7.2620033,17.436 5.9680001,17.436 C4.6739969,17.436 3.6250001,16.387003 3.6250001,15.093 C3.6250001,13.798997 4.6739969,12.75 5.9680001,12.75 C7.2620033,12.75 8.3110002,13.798997 8.3110002,15.093 z M18.405,6.9690001 C18.405,8.2630033 17.356003,9.3120001 16.062,9.3120001 C14.767997,9.3120001 13.719,8.2630033 13.719,6.9690001 C13.719,5.6749969 14.767997,4.626 16.062,4.626 C17.356003,4.626 18.405,5.6749969 18.405,6.9690001 z" 
                                   Stretch="Fill" Stroke="{TemplateBinding BorderBrush}"
@@ -373,7 +373,7 @@
 
     <Style TargetType="v:LongProcessControl" x:Key="DefaultLongProcessControlStyle">
         <Setter Property="Foreground" Value="{StaticResource TwitterTweetBackgroundBrush}"/>
-        <Setter Property="Background" Value="{StaticResource ItgmBackgroundBrush}"/>
+        <Setter Property="Background" Value="Transparent"/>
         <Style.Triggers>
             <Trigger Property="IsColorInverted" Value="True">
                 <Setter Property="Foreground" Value="{StaticResource ItgmBackgroundBrush}"/>
