--- a/Itgm/Itgm/Views/GeneralContentPage.xaml
+++ b/Itgm/Itgm/Views/GeneralContentPage.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="Itgm.Views.TweetsPage"
+﻿<UserControl x:Class="Itgm.Views.GeneralContentPage"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
