--- a/Itgm/Itgm/Views/ContentPage.xaml
+++ b/Itgm/Itgm/Views/ContentPage.xaml
@@ -16,7 +16,7 @@
              MinWidth="1000">
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="29"/>
+            <RowDefinition Height="40"/>
             <RowDefinition/>
         </Grid.RowDefinitions>
         <Grid Grid.Row="0" Background="Transparent">
@@ -24,10 +24,10 @@
                 <Style TargetType="{x:Type Button}" BasedOn="{StaticResource DefaultButtonStyle}"/>
             </Grid.Resources>
 
-            <Grid VerticalAlignment="Stretch"
+            <Grid VerticalAlignment="Center"
                   HorizontalAlignment="Left" 
                   Margin="5,2,0,2"
-                  Width="25">
+                  Width="25" Height="25">
                 <Border Name="AvatarImageMask" 
                         CornerRadius="4" 
                         Background="{StaticResource TwitterTweetBackgroundBrush}"/>
@@ -42,10 +42,10 @@
             <TextBlock Text="{Binding User.UserName, Mode=OneWay, StringFormat=@{0}}"
                        VerticalAlignment="Center"
                        HorizontalAlignment="Left"
-                       Margin="33,0,0,0"
+                       Margin="35,0,0,0"
                        FontWeight="Normal"
                        FontSize="13"
-                       Foreground="{StaticResource TwitterTweetBackgroundBrush}"
+                       Foreground="{StaticResource TwitterAdditionalTextBrush}"
                        TextTrimming="CharacterEllipsis"/>
 
             <!--<Button Command="{Binding UpdateCommand}"
@@ -55,12 +55,12 @@
                     Foreground="White"
                     Content="Обновить"/>-->
 
-            <CheckBox Style="{StaticResource AnimatedSwitch}" 
+            <!--<CheckBox Style="{StaticResource AnimatedSwitch}" 
                       Width="40"
                       Command="{Binding SwitchContentCommand}"
                       VerticalAlignment="Center"
                       HorizontalAlignment="Right" 
-                      Margin="0,0,0,0"/>
+                      Margin="0,0,0,0"/>-->
 
             <!--<Button Command="{Binding ReloginCommand}"
                     HorizontalAlignment="Right" 
@@ -69,6 +69,6 @@
                     Margin="0,0,5,0"
                     Content="Выйти"/>-->
         </Grid>
-        <ContentControl Grid.Row="1" Content="{Binding CurrentContent, Mode=OneWay}"/>
+        <ContentControl Grid.Row="1" Margin="5" Content="{Binding CurrentContent, Mode=OneWay}"/>
     </Grid>
 </UserControl>
