--- a/Itgm/Itgm/Views/CommentsView.xaml
+++ b/Itgm/Itgm/Views/CommentsView.xaml
@@ -3,19 +3,24 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
+             
              xmlns:local="clr-namespace:Itgm"
              xmlns:v="clr-namespace:Itgm.Views"
              xmlns:vm="clr-namespace:Itgm.ViewModels"
+             
              mc:Ignorable="d"
-             d:DataContext="{d:DesignInstance vm:CommentsViewModel}">
+             d:DataContext="{d:DesignInstance vm:CommentsViewModel}"
+             MinHeight="500">
     <Grid>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="*" />
-            <ColumnDefinition Width="0.3*" />
+            <ColumnDefinition Width="auto"/>
+            <ColumnDefinition />
         </Grid.ColumnDefinitions>
 
         <ListView ItemsSource="{Binding Medias, Mode=OneTime}"
                   Name="Medias"
+                  MinWidth="425"
+                  MaxWidth="600"
                   SelectedItem="{Binding CurrentMedia}"
                   DisplayMemberPath="{Binding Pk}"
                   Padding="5"
@@ -36,12 +41,13 @@
             <ListView.ItemTemplate>
                 <DataTemplate>
                     <Grid Name="MainItemGrid"
+                          Width="140"
+                          Height="140"
+                          Margin="3"
                           Background="{StaticResource TwitterTweetBackgroundBrush}"
                           HorizontalAlignment="Stretch">
 
                         <Grid Name="MainContentImageGrid"
-                              HorizontalAlignment="Left"
-                              Width="136"
                               DataContext="{Binding Image, Mode=OneTime}"
                               Tag="{Binding ExpandedURL, Mode=OneTime}">
                             <Image Source="{Binding Url, IsAsync=True}"
@@ -51,7 +57,6 @@
 
                         <Grid Name="LikesGrid"
                               Height="25"
-                              Width="136"
                               VerticalAlignment="Bottom"
                               Background="{StaticResource TwitterTweetBackgroundBrush}">
 
@@ -82,7 +87,7 @@
                                        Foreground="{StaticResource TwitterAdditionalTextBrush}"
                                        FontSize="12" />
 
-                            <TextBlock Text="{Binding CommentsCount, Mode=OneTime}"
+                            <TextBlock Text="{Binding CommentsCount}"
                                        Grid.Row="0"
                                        Grid.Column="1"
                                        VerticalAlignment="Center"
@@ -90,7 +95,7 @@
                                        FontWeight="Medium"
                                        Foreground="{StaticResource TwitterAdditionalTextBrush}" />
 
-                            <TextBlock Text="{Binding LikesCount, Mode=OneTime}"
+                            <TextBlock Text="{Binding LikesCount}"
                                        Grid.Row="1"
                                        Grid.Column="3"
                                        VerticalAlignment="Center"
@@ -107,35 +112,39 @@
                     </Grid>
                 </DataTemplate>
             </ListView.ItemTemplate>
+            
+            <ListView.ItemContainerStyle>
+                <Style TargetType="ListViewItem">
+                    <Setter Property="BorderThickness" Value="0" />
+                    <Setter Property="Margin" Value="0" />
+                    <Setter Property="Padding" Value="0" />
+                    <Setter Property="HorizontalContentAlignment" Value="Stretch" />
+                    <Style.Triggers>
+                        <MultiTrigger>
+                            <MultiTrigger.Conditions>
+                                <Condition Property="IsSelected" Value="true" />
+                            </MultiTrigger.Conditions>
+                            <Setter Property="BorderThickness" Value="3" />
+                        </MultiTrigger>
+                    </Style.Triggers>
+                </Style>
+            </ListView.ItemContainerStyle>
 
             <ListView.ItemsPanel>
                 <ItemsPanelTemplate>
-                    <StackPanel Orientation="Horizontal"
-                                HorizontalAlignment="Left"
-                                VerticalAlignment="Top" />
+                    <WrapPanel Orientation="Horizontal"
+                               HorizontalAlignment="Stretch"
+                               VerticalAlignment="Stretch"
+                               VirtualizingPanel.ScrollUnit="Pixel"/>
                 </ItemsPanelTemplate>
             </ListView.ItemsPanel>
 
-            <ListView.ItemContainerStyle>
-                <Style TargetType="ListViewItem">
-                    <Setter Property="Width"
-                            Value="140" />
-                    <Setter Property="Padding"
-                            Value="2" />
-                    <Setter Property="BorderThickness"
-                            Value="0" />
-                    <Setter Property="HorizontalContentAlignment"
-                            Value="Stretch" />
-                </Style>
-            </ListView.ItemContainerStyle>
         </ListView>
 
         <ListView ItemsSource="{Binding CurrentMedia.Comments}"
-                  DisplayMemberPath="Text"
                   Foreground="White"
                   Grid.Column="1"
-                  Margin="2,0,0,0"
-                  Padding="5"
+                  Margin="3,0,0,0"
                   Background="{StaticResource OpaqueGrayBrush}"
                   ScrollViewer.HorizontalScrollBarVisibility="Disabled"
                   ScrollViewer.VerticalScrollBarVisibility="Auto"
@@ -147,11 +156,32 @@
                             Value="{StaticResource VerticalScrollBar}" />
                 </Style>
             </ListView.Resources>
+            
+            <ListView.ItemTemplate>
+                <DataTemplate>
+                    <Grid Name="MainItemGrid" >
+                        <Grid.ColumnDefinitions>
+                            <ColumnDefinition Width="auto"/>
+                            <ColumnDefinition Width="*"/>
+                        </Grid.ColumnDefinitions>
+                        
+                        <TextBlock Grid.Column="0"
+                                   Margin="2"
+                                   FontWeight="Bold"
+                                   TextAlignment="Left"
+                                   Text="{Binding User.UserName, StringFormat={}{0}:}"/>
+
+                        <TextBox Grid.Column="1"
+                                 Margin="2"
+                                 TextWrapping="WrapWithOverflow"
+                                 Text="{Binding Text}">
+                        </TextBox>
+                    </Grid>
+                </DataTemplate>
+            </ListView.ItemTemplate>
         </ListView>
 
-        <v:LongProcessControl Grid.ColumnSpan="3"
-                              Grid.RowSpan="2"
-                              Visibility="{Binding IsLongProcessStarted, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
+        <v:LongProcessControl Visibility="{Binding IsLongProcessStarted, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}"
                               Opacity="0.3" />
     </Grid>
 </UserControl>
