--- a/Itgm/Itgm/Views/CommentsView.xaml
+++ b/Itgm/Itgm/Views/CommentsView.xaml
@@ -48,9 +48,8 @@
                           HorizontalAlignment="Stretch">
 
                         <Grid Name="MainContentImageGrid"
-                              DataContext="{Binding Image, Mode=OneTime}"
-                              Tag="{Binding ExpandedURL, Mode=OneTime}">
-                            <Image Source="{Binding Url, IsAsync=True}"
+                              DataContext="{Binding Image, Mode=OneTime}">
+                            <Image Source="{Binding Url, IsAsync=True, Converter={StaticResource ImageAsyncConverter}}"
                                    Name="ContentImage">
                             </Image>
                         </Grid>
@@ -87,7 +86,7 @@
                                        Foreground="{StaticResource TwitterAdditionalTextBrush}"
                                        FontSize="12" />
 
-                            <TextBlock Text="{Binding CommentsCount}"
+                            <TextBlock Text="{Binding CommentsCount, IsAsync=True}"
                                        Grid.Row="0"
                                        Grid.Column="1"
                                        VerticalAlignment="Center"
@@ -95,7 +94,7 @@
                                        FontWeight="Medium"
                                        Foreground="{StaticResource TwitterAdditionalTextBrush}" />
 
-                            <TextBlock Text="{Binding LikesCount}"
+                            <TextBlock Text="{Binding LikesCount, IsAsync=True}"
                                        Grid.Row="1"
                                        Grid.Column="3"
                                        VerticalAlignment="Center"
